--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="nouvelle-page.html">Projet</a>
+                        <a class="nav-link" href="nouvelle-page.html">Projet avec l'école</a>
                     </li>
 
                 </ul>
@@ -76,13 +76,13 @@
                 </div>
 
                 <div class="col-lg-8">
-                    <p> Je suis Pablo Arias , étudiant en bac+1 à la Madone. Je suis quelqu'un de calme,,discret,sage,studieux et aime les travaux de groupes. Quand il s'agit de travailler je m'y met sérieusement.
+                    <p> Je suis Pablo Arias , étudiant en bac+2 à la Madone. Je suis quelqu'un de calme,,discret,sage,studieux et aime les travaux de groupes. Quand il s'agit de travailler je m'y met sérieusement.
                     </p>
                     <div class="row mt-3">
                         <div class="col-md-6">
                             <ul>
                                 <li>Prénom: Pablo Arias</li>
-                                <li>Age: 18 ans</li>
+                                <li>Age: 19 ans</li>
                                 <li>Occupation: Etudiant </li>
 
                             </ul>
@@ -90,7 +90,7 @@
 
                     </div>
                     <div class="row mt-3">
-                        <p> En dehors de l'école je suis une personne qui aime sortir faire des sorties avec des amies tel qu'aller au cinéma, au restaurant,etc... Chez moi je suis une personne qui joue beacoup aux jeux vidéos. Depuis 3 ans maintenant j'ai suivis l'option informatique et est pu développer des compétences dans certains domaines tel que les languages informatique comme python, html, css, javascript et dans els bases de donnés. Ainsi je maitrise le vocabulaire et les connaissances à avoir pour pouvoir répondre à un problème et le corriger. 
+                        <p> En dehors de l'école je suis une personne qui aime sortir faire des sorties avec des amis tel qu'aller au cinéma, au restaurant,etc... Chez moi je suis une personne qui joue beacoup aux jeux vidéos. Depuis 3 ans maintenant j'ai suivis l'option informatique et est pu développer des compétences dans certains domaines tel que les languages informatique comme python, html, css, javascript et dans les bases de données. Ainsi je maitrise le vocabulaire et les connaissances à avoir pour pouvoir répondre à un problème et le corriger. 
                         </p>
                     </div>
                 </div>
