--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="col-md-6">
                             <ul>
                                 <li>Prénom: Pablo Arias</li>
-                                <li>Age: 19 ans</li>
+                                <li>Age: 20 ans</li>
                                 <li>Occupation: Etudiant </li>
 
                             </ul>
@@ -90,7 +90,7 @@
 
                     </div>
                     <div class="row mt-3">
-                        <p> En dehors de l'école je suis une personne qui aime sortir faire des sorties avec des amis tel qu'aller au cinéma, au restaurant,etc... Chez moi je suis une personne qui joue beacoup aux jeux vidéos. Depuis 3 ans maintenant j'ai suivis l'option informatique et est pu développer des compétences dans certains domaines tel que les languages informatique comme python, html, css, javascript et dans les bases de données. Ainsi je maitrise le vocabulaire et les connaissances à avoir pour pouvoir répondre à un problème et le corriger. 
+                        <p> En dehors de l'école je suis une personne qui aime sortir faire des sorties avec des amis tel qu'aller au cinéma, au restaurant, etc... Chez moi je suis une personne qui joue beacoup aux jeux vidéos. Depuis 3 ans maintenant j'ai suivis l'option informatique et est pu développer des compétences dans certains domaines tel que les languages informatique comme python, html, javascript, C#, css et dans les bases de données. Ainsi je maitrise le vocabulaire et les connaissances à avoir pour pouvoir répondre à un problème et le corriger. 
                         </p>
                     </div>
                 </div>
