--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#Vielles Technologies">Vielles Technologies</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Epreuve E4 BTS SIO">Epreuve E4 BTS SIO</a>
+                        <a class="nav-link" href="#Epreuve E4 BTS SIO">Epreuve E5 BTS SIO</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Contacte">Contacte</a>
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="nouvelle-page.html">Projet avec l'école</a>
+                        <a class="nav-link" href="nouvelle-page.html">Projets avec l'école</a>
                     </li>
 
                 </ul>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="col-lg-8">
-                    <p> Je suis Pablo Arias , étudiant en bac+2 à la Madone. Je suis quelqu'un de calme,,discret,sage,studieux et aime les travaux de groupes. Quand il s'agit de travailler je m'y met sérieusement.
+                    <p> Je suis Pablo Arias, étudiant en bac+2 à la Madone. Je suis quelqu'un de calme, discret, sage, studieux et aime les travaux de groupes. Quand il s'agit de travailler je m'y met sérieusement.
                     </p>
                     <div class="row mt-3">
                         <div class="col-md-6">
@@ -90,7 +90,7 @@
 
                     </div>
                     <div class="row mt-3">
-                        <p> En dehors de l'école je suis une personne qui aime sortir faire des sorties avec des amis tel qu'aller au cinéma, au restaurant, etc... Chez moi je suis une personne qui joue beacoup aux jeux vidéos. Depuis 3 ans maintenant j'ai suivis l'option informatique et est pu développer des compétences dans certains domaines tel que les languages informatique comme python, html, javascript, C#, css et dans les bases de données. Ainsi je maitrise le vocabulaire et les connaissances à avoir pour pouvoir répondre à un problème et le corriger. 
+                        <p> En dehors de l'école je suis une personne qui aime sortir faire des sorties avec des amis tel qu'aller au cinéma, au restaurant, etc... Chez moi je suis une personne qui joue beacoup aux jeux vidéos. Depuis 3 ans maintenant j'ai suivis l'option informatique et est pu développer des compétences dans certains domaines tel que les languages informatiques comme python, html, javascript, C#, css et dans les bases de données. Ainsi je maitrise le vocabulaire et les connaissances à avoir pour pouvoir répondre à un problème et le corriger. 
                         </p>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
 
                                 <div class="card-body">
                                     <h4 class="card-title">CV</h4>
-                                    <p class="card text-center">Capture d'écran de mon CV professionel</p>
+                                    <p class="card text-center">Mon CV professionel</p>
 
                                 </div>
                             </div>
@@ -227,7 +227,7 @@
     <!-- Epreuve E4 BTS SIO section-->
     <section id="Epreuve E4 BTS SIO">
         <div class="container mt-3">
-            <h1 class="text-center">Epreuve E4 BTS SIO</h1>
+            <h1 class="text-center">Epreuve E5 BTS SIO</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
@@ -235,9 +235,9 @@
                             style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Qu'est ce que c'est ?</h4>
-                            <p class="card-text">L'épreuve E4 du BTS SIO se divise en deux parties. Une épreuve qui te
+                            <p class="card-text">L'épreuve E5 du BTS SIO se divise en deux parties. Une épreuve qui te
                                 met en situation réelle, où tu dois mobiliser les compétences que tu as développées au
-                                cours de ta formation.La première partie est un entretien de 15 minutes. Tu dois exposer
+                                cours de ta formation. La première partie est un entretien de 15 minutes. Tu dois exposer
                                 un projet que tu as préparé. Ensuite, le jury présente des modifications à apporter à
                                 ton projet. Tu disposes de 20 minutes pour les réaliser. Ensuite, tu as un second
                                 entretien de 15 minutes pour présenter les modifications que tu as faites. Après cela,
@@ -284,7 +284,7 @@
             <!-- contact section-->
             <section id="Contacte">
                 <div class="container mt-3 ContacteContent">
-                    <h1 class="text-center">Contacter moi</h1>
+                    <h1 class="text-center">Contactez-moi</h1>
 
                     <div class="row mt-4">
                         <div class="col-lg-6">
@@ -321,17 +321,18 @@
                                         placeholder="Détail du projet"></textarea>
                                 </div>
                             </form>
-                            <button type="button" class="btn btn-success mt-3">Contacter moi</button>
+                            <button type="button" class="btn btn-success mt-3">Contactez-moi</button>
 
                         </div>
 
                     </div>
                 </div>
             </section>
-            <!-- footer section-->
+            <!--
+             footer section
             <footer id="footer">
                 <div class="container-fluid">
-                    <!-- social media icons -->
+                    
                     <div class="social-icons mt-4">
                         <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
@@ -339,7 +340,7 @@
                     </div>
                 </div>
             </footer>
-
+        -->
             <!-- load javascript after loading all html content -->
 
             <script src="script/script.js"></script>
