--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                                 <div style="text-align: center;">
 
-                                    <img class="card-img-top" src="images/Captured'écranCV.png" alt="Card image"
+                                    <img class="card-img-top" src="images/Mon CV professionnel.pdf" alt="Card image"
                                         style="width:50%">
 
                                 </div>
