--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#Vielles Technologies">Vielles Technologies</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Epreuve E4 BTS SIO">Epreuve E5 BTS SIO</a>
+                        <a class="nav-link" href="#Epreuve E5 BTS SIO">Epreuve E5 BTS SIO</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Contacte">Contacte</a>
@@ -110,8 +110,9 @@
 
                                 <div style="text-align: center;">
 
-                                    <img class="card-img-top" src="images/Mon CV professionnel.pdf" alt="Card image"
+                                    <img class="card-img-top" src="images/cv_image.jpg" alt="Card image"
                                         style="width:50%">
+
 
                                 </div>
 
