--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                         <a class="nav-link" href="#Information">Information</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Vielles Technologies">Vielles Technologies</a>
+                        <a class="nav-link" href="#CV">CV</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Veilles Technologiques">Veilles Technologiques</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Epreuve E5 BTS SIO">Epreuve E5 BTS SIO</a>
@@ -41,12 +44,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#Contacte">Contacte</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#CV">CV</a>
-                    </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="nouvelle-page.html">Projets avec l'école</a>
+                        <a class="nav-link" href="page projets.html">Projets avec l'école</a>
                     </li>
 
                 </ul>
@@ -117,7 +117,6 @@
                                 </div>
 
                                 <div class="card-body">
-                                    <h4 class="card-title">CV</h4>
                                     <p class="card text-center">Mon CV professionel</p>
 
                                 </div>
@@ -128,8 +127,8 @@
         </div>
     </section>
 
-    <!--Vielles Technologies section-->
-    <section id="Veilles Technologies">
+    <!--Veilles Technologiques section-->
+    <section id="Veilles Technologiques">
         <div class="container">
             <h1 class="text-center">Veilles Technologiques</h1>
             <div class="row">
@@ -226,7 +225,7 @@
     </section>
 
     <!-- Epreuve E4 BTS SIO section-->
-    <section id="Epreuve E4 BTS SIO">
+    <section id="Epreuve E5 BTS SIO">
         <div class="container mt-3">
             <h1 class="text-center">Epreuve E5 BTS SIO</h1>
             <div class="row">
@@ -251,29 +250,11 @@
                 </div>
 
                 <div class="col-lg-4 mt-4">
-                    <div class="card Epreuve E4 BTS SIO Content">
-                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                    <div class="card Epreuve E5 BTS SIO Content">
+                        <img class="card-img-top" src="images/tableau_synthese.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Exemple </h4>
-                            <p class="card-text">Imaginons un exemple. Supposons que tu as développé une application sur
-                                Android Studio pour le stage de deuxième année. Le jury pourrait te demander d'ajouter
-                                une nouvelle fonctionnalité ou de modifier une fonctionnalité existante.Tu devrais alors
-                                réfléchir rapidement sur la façon de le faire, écrire le code nécessaire, le tester et
-                                documenter les modifications. Ce processus exige une bonne connaissance des outils, une
-                                excellente compétence en résolution de problèmes et une capacité à travailler sous
-                                pression.</p>
-                            <div class="text-center">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 mt-4">
-                    <div class="card Epreuve E4 BTS SIO Content">
-                        <img class="card-img-top" src="images/imageportfolio3.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
-                            <h4 class="card-title">Quand?</h4>
-                            <p class="card-text">Passage à l'oral entre Avril et Mai. Compétences évaluées ci-dessus.
+                            <h4 class="card-title">Tableau des compétences</h4>
+                            <p class="card-text">Mon tableau des compétences évaluées ci-dessus.
                             </p>
                             <div class="text-center">
                             </div>
