ajout page projets

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <ul>
                                 <li>Prénom: Pablo Arias</li>
                                 <li>Age: 20 ans</li>
-                                <li>Occupation: Etudiant </li>
+                                <li>Occupation: Etudiant option slam </li>
 
                             </ul>
                         </div>
