ajout des dernier projets

--- a/page projets.html
+++ b/page projets.html
@@ -42,7 +42,7 @@
                     </div>
                 </figure>
                 <figure>
-                    <img src="Capture d'écran code python.jpg" alt="Description de l'image 3" width="300" height="200">
+                    <img src="images/Capture d'écran code python.jpg" alt="Description de l'image 3" width="300" height="200">
                     <figcaption>Projet 3 : Calculatrice python</figcaption>
                     <div class="project-buttons">
                         <a href="https://github.com/Pabars93/calculatricepython/blob/main/DocumentationPython.pdf" target="_blank" class="button">Documentation</a>
@@ -51,7 +51,7 @@
                 </figure>
                 <figure>
                     <img src="images/Extrait code.jpg" alt="Description de l'image 3" width="300" height="200">
-                    <figcaption>Projet 4 : Extrait de notre code pour l'application </figcaption>
+                    <figcaption>Projet 4 : Caldulatrice en  </figcaption>
                     <div class="project-buttons">
                         <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
                         <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
@@ -59,7 +59,7 @@
                 </figure>
                 <figure>
                     <img src="images/projet5.jpg" alt="Projet 5" width="300" height="200">
-                    <figcaption>Projet 5 : Description du projet</figcaption>
+                    <figcaption>Projet 5 : Projet stage 1er année"</figcaption>
                     <div class="project-buttons">
                         <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
                         <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
@@ -67,7 +67,7 @@
                 </figure>
                 <figure>
                     <img src="images/projet6.jpg" alt="Projet 6" width="300" height="200">
-                    <figcaption>Projet 6 : Description du projet</figcaption>
+                    <figcaption>Projet 6 : Projet stage 2ème année</figcaption>
                     <div class="project-buttons">
                         <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
                         <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
@@ -75,23 +75,7 @@
                 </figure>
                 <figure>
                     <img src="images/projet7.jpg" alt="Projet 7" width="300" height="200">
-                    <figcaption>Projet 7 : Description du projet</figcaption>
-                    <div class="project-buttons">
-                        <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
-                        <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
-                    </div>
-                </figure>
-                <figure>
-                    <img src="images/projet8.jpg" alt="Projet 8" width="300" height="200">
-                    <figcaption>Projet 8 : Description du projet</figcaption>
-                    <div class="project-buttons">
-                        <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
-                        <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
-                    </div>
-                </figure>
-                <figure>
-                    <img src="images/projet9.jpg" alt="Projet 9" width="300" height="200">
-                    <figcaption>Projet 9 : Description du projet</figcaption>
+                    <figcaption>Projet 7 : Projet portfolio</figcaption>
                     <div class="project-buttons">
                         <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
                         <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
