ajout rapport stage

--- a/page projets.html
+++ b/page projets.html
@@ -61,7 +61,7 @@
                     <img src="images/projet5.jpg" alt="Projet 5" width="300" height="200">
                     <figcaption>Projet 5 : Projet stage 1er année"</figcaption>
                     <div class="project-buttons">
-                        <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
+                        <a href="images/Rapport de stage en SLAM.pdf" target="_blank" class="button">Documentation</a>
                         <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
                     </div>
                 </figure>
