--- a/page projets.html
+++ b/page projets.html
@@ -51,7 +51,7 @@
                 </figure>
                 <figure>
                     <img src="images/Extrait code.jpg" alt="Description de l'image 3" width="300" height="200">
-                    <figcaption>Projet 4 : Caldulatrice en  </figcaption>
+                    <figcaption>Projet 4 : Caldulatrice en php </figcaption>
                     <div class="project-buttons">
                         <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
                         <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
@@ -62,15 +62,15 @@
                     <figcaption>Projet 5 : Projet stage 1er année"</figcaption>
                     <div class="project-buttons">
                         <a href="images/Rapport de stage en SLAM.pdf" target="_blank" class="button">Documentation</a>
-                        <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
+                        <a href="https://github.com/Pabars93/Angular" class="button">Code Source</a>
                     </div>
                 </figure>
                 <figure>
                     <img src="images/projet6.jpg" alt="Projet 6" width="300" height="200">
                     <figcaption>Projet 6 : Projet stage 2ème année</figcaption>
                     <div class="project-buttons">
-                        <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
-                        <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
+                        <a href="" target="_blank" class="button">Documentation</a>
+                        <a href="" class="button">Code Source</a>
                     </div>
                 </figure>
                 <figure>
@@ -78,7 +78,7 @@
                     <figcaption>Projet 7 : Projet portfolio</figcaption>
                     <div class="project-buttons">
                         <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
-                        <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
+                        <a href="" class="button">Code Source</a>
                     </div>
                 </figure>
             </div>
