--- a/page projets.html
+++ b/page projets.html
@@ -53,8 +53,8 @@
                     <img src="images/Extrait code.jpg" alt="Description de l'image 3" width="300" height="200">
                     <figcaption>Projet 4 : Caldulatrice en php </figcaption>
                     <div class="project-buttons">
-                        <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
-                        <a href="https://github.com/Pabars93/personnel/tree/main/Personnel/personnel-master/personnel-master" class="button">Code Source</a>
+                        <a href="https://github.com/Pabars93/calculatrice-/blob/main/DocLaravelPablo.pdf" target="_blank" class="button">Documentation</a>
+                        <a href="https://github.com/Pabars93/calculatrice-" class="button">Code Source</a>
                     </div>
                 </figure>
                 <figure>
@@ -77,7 +77,7 @@
                     <img src="images/projet7.jpg" alt="Projet 7" width="300" height="200">
                     <figcaption>Projet 7 : Projet portfolio</figcaption>
                     <div class="project-buttons">
-                        <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
+                        <a href="" target="_blank" class="button">Documentation</a>
                         <a href="" class="button">Code Source</a>
                     </div>
                 </figure>
