--- a/page projets.html
+++ b/page projets.html
@@ -34,7 +34,7 @@
                     </div>
                 </figure>
                 <figure>
-                    <img src="" alt="Description de l'image 2" width="300" height="200">
+                    <img src="images/Capture d'écran code parking.jpg" alt="Description de l'image 2" width="300" height="200">
                     <figcaption>Projet 2 : Application de gestion de parking</figcaption>
                     <div class="project-buttons">
                         <a href="images/parking.pdf" target="_blank" class="button">Documentation</a>
@@ -58,7 +58,7 @@
                     </div>
                 </figure>
                 <figure>
-                    <img src="images/projet5.jpg" alt="Projet 5" width="300" height="200">
+                    <img src="images/Capture d'écran Stage.jpg" alt="Projet 5" width="300" height="200">
                     <figcaption>Projet 5 : Projet stage 1er année"</figcaption>
                     <div class="project-buttons">
                         <a href="images/Rapport de stage en SLAM.pdf" target="_blank" class="button">Documentation</a>
@@ -66,7 +66,7 @@
                     </div>
                 </figure>
                 <figure>
-                    <img src="images/projet6.jpg" alt="Projet 6" width="300" height="200">
+                    <img src="images/Capture d'écran portfolio.jpg" alt="Projet 6" width="300" height="200">
                     <figcaption>Projet 6 : Projet stage 2ème année</figcaption>
                     <div class="project-buttons">
                         <a href="" target="_blank" class="button">Documentation</a>
