--- a/page projets.html
+++ b/page projets.html
@@ -74,7 +74,7 @@
                     </div>
                 </figure>
                 <figure>
-                    <img src="images/projet7.jpg" alt="Projet 7" width="300" height="200">
+                    <img src="images/Capture d'écran portfolio.jpg"" alt="Projet 7" width="300" height="200">
                     <figcaption>Projet 7 : Projet portfolio</figcaption>
                     <div class="project-buttons">
                         <a href="" target="_blank" class="button">Documentation</a>
