--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <ul>
                                 <li>Prénom: Pablo Arias</li>
                                 <li>Age: 20 ans</li>
-                                <li>Occupation: Etudiant option slam </li>
+                                <li>Occupation: Etudiant option SLAM </li>
 
                             </ul>
                         </div>
@@ -310,19 +310,6 @@
                     </div>
                 </div>
             </section>
-            <!--
-             footer section
-            <footer id="footer">
-                <div class="container-fluid">
-                    
-                    <div class="social-icons mt-4">
-                        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
-                    </div>
-                </div>
-            </footer>
-        -->
             <!-- load javascript after loading all html content -->
 
             <script src="script/script.js"></script>
