--- a/page projets.html
+++ b/page projets.html
@@ -59,7 +59,7 @@
                 </figure>
                 <figure>
                     <img src="images/Capture d'écran Stage.jpg" alt="Projet 5" width="300" height="200">
-                    <figcaption>Projet 5 : Projet stage 1er année"</figcaption>
+                    <figcaption>Projet 5 : Projet stage 1er année</figcaption>
                     <div class="project-buttons">
                         <a href="images/Rapport de stage en SLAM.pdf" target="_blank" class="button">Documentation</a>
                         <a href="https://github.com/Pabars93/Angular" class="button">Code Source</a>
@@ -78,7 +78,15 @@
                     <figcaption>Projet 7 : Projet portfolio</figcaption>
                     <div class="project-buttons">
                         <a href="" target="_blank" class="button">Documentation</a>
-                        <a href="" class="button">Code Source</a>
+                        <a href="https://github.com/Pabars93/Pabars93.github.io" class="button">Code Source</a>
+                    </div>
+                </figure>
+                <figure>
+                    <img src="images/Capture d'écran Stage.jpg" alt="Projet 5" width="300" height="200">
+                    <figcaption>Projet 8 : Projet Startup</figcaption>
+                    <div class="project-buttons">
+                        <a href="images/startup.pdf" target="_blank" class="button">Documentation</a>
+                        <a href="https://samtns.github.io/startup/" class="button">Voir projet</a>
                     </div>
                 </figure>
             </div>
