--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="page projets.html">Projets avec l'école</a>
+                        <a class="nav-link" href="page projets.html">Projets</a>
                     </li>
 
                 </ul>
