--- a/index.html
+++ b/index.html
@@ -164,15 +164,7 @@
                         <div class="card-body">
                             <i class='far servicesIcon fa-check-circle'></i>
                             <h4 class="card-title mt-3">Quels sont les différents types de veille ?</h4>
-                            <p class="card-text mt-3">Parmi les principaux types de veille que l'on rencontre
-                                généralement dans les entreprises, on peut citer :
-                                la veille stratégique ;
-                                la veille concurrentielle ;
-                                la veille technologique ;
-                                la veille commerciale ;
-                                la veille juridique et réglementaire ;
-                                la veille image.
-                            </p>
+                            <p class="card-text mt-3">
                         </div>
                     </div>
                 </div>
