--- a/page projets.html
+++ b/page projets.html
@@ -70,19 +70,19 @@
                     <figcaption>Projet 6 : Projet stage 2ème année</figcaption>
                     <div class="project-buttons">
                         <a href="" target="_blank" class="button">Documentation</a>
-                        <a href="" class="button">Code Source</a>
+                        <a href="https://github.com/Pabars93/API" class="button">Code Source</a>
                     </div>
                 </figure>
                 <figure>
-                    <img src="images/Capture d'écran portfolio.jpg"" alt="Projet 7" width="300" height="200">
+                    <img src="images/Capture d'écran portfolio.jpg" alt="Projet 7" width="300" height="200">
                     <figcaption>Projet 7 : Projet portfolio</figcaption>
                     <div class="project-buttons">
-                        <a href="" target="_blank" class="button">Documentation</a>
+                        <a href="images/PortfolioDocumentation.pdf" target="_blank" class="button">Documentation</a>
                         <a href="https://github.com/Pabars93/Pabars93.github.io" class="button">Code Source</a>
                     </div>
                 </figure>
                 <figure>
-                    <img src="images/Capture d'écran Stage.jpg" alt="Projet 5" width="300" height="200">
+                    <img src="images/image portfolio 1.jpg" alt="Projet 5" width="300" height="200">
                     <figcaption>Projet 8 : Projet Startup</figcaption>
                     <div class="project-buttons">
                         <a href="images/startup.pdf" target="_blank" class="button">Documentation</a>
