--- a/page projets.html
+++ b/page projets.html
@@ -66,10 +66,10 @@
                     </div>
                 </figure>
                 <figure>
-                    <img src="images/Capture d'écran portfolio.jpg" alt="Projet 6" width="300" height="200">
+                    <img src="images/Capture d'écran Stage.jpg" alt="Projet 6" width="300" height="200">
                     <figcaption>Projet 6 : Projet stage 2ème année</figcaption>
                     <div class="project-buttons">
-                        <a href="" target="_blank" class="button">Documentation</a>
+                        <a href="images/Rapport de stage en SLAM 2.pdf" target="_blank" class="button">Documentation</a>
                         <a href="https://github.com/Pabars93/API" class="button">Code Source</a>
                     </div>
                 </figure>
