Update de la veille

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                     </div>
                     <div class="row mt-3">
-                        <p> En dehors de l'école je suis une personne qui aime sortir faire des sorties avec des amis tel qu'aller au cinéma, au restaurant, etc... Chez moi je suis une personne qui joue beacoup aux jeux vidéos. Depuis 3 ans maintenant j'ai suivis l'option informatique et est pu développer des compétences dans certains domaines tel que les languages informatiques comme python, html, javascript, C#, css et dans les bases de données. Ainsi je maitrise le vocabulaire et les connaissances à avoir pour pouvoir répondre à un problème et le corriger. 
+                        <p> En dehors de l'école je suis une personne qui aime sortir faire des sorties avec des amis tel qu'aller au cinéma, au restaurant, etc... Chez moi je suis une personne qui joue beacoup aux jeux vidéos. Depuis 4 ans maintenant j'ai suivis l'option informatique et est pu développer des compétences dans certains domaines tel que les languages informatiques comme python, html, javascript, C#, css et dans les bases de données. Ainsi je maitrise le vocabulaire et les connaissances à avoir pour pouvoir répondre à un problème et le corriger. 
                         </p>
                     </div>
                 </div>
@@ -137,10 +137,7 @@
                         <div class="card-body">
                             <i class="fas servicesIcon fa-clock"></i>
                             <h4 class="card-title mt-3">Definition</h4>
-                            <p class="card-text mt-3">La veille technologique est une veille spécifique, sa mise en
-                                place permet d'étudier l'évolution de sujets et secteurs en mutation permanente. Cette
-                                action permet ainsi à une entreprise de suivre le développement et l'apparition de
-                                nouvelles technologiques pouvant considérablement influer sur son activité.
+                            <p class="card-text mt-3">La veille technologique est un processus de surveillance et d'analyse des évolutions techniques et scientifiques dans un domaine spécifique. Elle permet d'anticiper les innovations, d'adapter les stratégies d’entreprise et d'améliorer les compétences professionnelles.
                             </p>
                         </div>
                     </div>
@@ -163,8 +160,8 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class='far servicesIcon fa-check-circle'></i>
-                            <h4 class="card-title mt-3">Quels sont les différents types de veille ?</h4>
-                            <p class="card-text mt-3">
+                            <h4 class="card-title mt-3">Pourquoi faire une veille technologique?</h4>
+                            <p class="card-text mt-3">La veille technologique est essentielle pour rester compétitif, améliorer ses compétences et s'adapter aux innovations. Elle peut être réalisée de manière individuelle ou organisée au sein d’une entreprise pour optimiser la prise de décision stratégique.
                         </div>
                     </div>
                 </div>
@@ -175,13 +172,12 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class='fas servicesIcon fa-search'></i>
-                            <h4 class="card-title mt-3">Quels sont les outils de la veille technologique ?</h4>
+                            <h4 class="card-title mt-3">Quels sont les outils de ma veille technologique ?</h4>
                             <p class="card-text mt-3">4 outils pour réaliser votre veille technologique
-                                Google Alerts. Grâce à un compte Google, vous pouvez obtenir les dernières informations
-                                sur les technologies. ...
-                                Feedly. La plupart des blogs disposent d'un flux RSS. ...
-                                Netvibes. Netvibes est également un agrégateur de flux RSS. ...
-                                Flipboard.
+                                Google Alerts. Grâce à un compte Google, j'obtiens les dernières informations articles
+                                sur le framework Angular.
+                                L'outil Feedly est un outil qui permet de s'abonner à des flux RSS et de recevoir
+                                automatiquement des contenus provenant d'autres sites web.
                             </p>
                         </div>
                     </div>
@@ -191,7 +187,7 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class='fas servicesIcon fa-shield-alt'></i>
-                            <h4 class="card-title mt-3">Exemple outil de veille</h4>
+                            <h4 class="card-title mt-3">Outil de veille</h4>
                             <p class="card-text mt-3">Découvrir Feedly
                                 Feedly est un outil qui permet de s'abonner à des flux RSS et de recevoir
                                 automatiquement des contenus provenant d'autres sites web, qu'il s'agisse d'un journal
@@ -205,9 +201,9 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class='fas servicesIcon fa-wrench'></i>
-                            <h4 class="card-title mt-3">Lien vers Feedly</h4>
+                            <h4 class="card-title mt-3">Lien vers le flux Feedly</h4>
                             <p class="card-text mt-3">
-                                https://feedly.com/?utm_source=bdmtools&utm_medium=siteweb&utm_campaign=feedly
+                                https://feedly.com/i/subscription/feed%2Fhttps%3A%2F%2Fblog.angular.io%2Ffeed
                             </p>
                         </div>
                     </div>
