--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
                         <div class="card-body">
                             <i class='fas servicesIcon fa-search'></i>
                             <h4 class="card-title mt-3">Quels sont les outils de ma veille technologique ?</h4>
-                            <p class="card-text mt-3">4 outils pour réaliser votre veille technologique
-                                Google Alerts. Grâce à un compte Google, j'obtiens les dernières informations articles
+                            <p class="card-text mt-3">Grâce à un compte Google (google alerts), j'obtiens les dernières informations articles
                                 sur le framework Angular.
                                 L'outil Feedly est un outil qui permet de s'abonner à des flux RSS et de recevoir
                                 automatiquement des contenus provenant d'autres sites web.
